--- a/VisualScope/VisualScope.csproj
+++ b/VisualScope/VisualScope.csproj
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CRC16_CCITT.cs" />
+    <Compile Include="DeepCopy.cs" />
     <Compile Include="Eval.cs" />
     <Compile Include="LeaderFollower.cs" />
     <Compile Include="LOS.cs" />
